--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "with-env": "dotenv -e ../../.env --",
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
@@ -11,14 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.4.1",
+    "@prepi/api": "*",
+    "@trpc/client": "^10.1.0",
+    "@trpc/next": "^10.45.2",
+    "@trpc/server": "^10.1.0",
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@prepi/eslint-config": "workspace:*",
+    "@prepi/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
