--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,8 @@
   "globalEnv": [
     "DATABASE_URL",
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
-    "CLERK_SECRET_KEY"
+    "CLERK_SECRET_KEY",
+    "VERCEL_URL",
+    "NODE_ENV"
   ]
 }
