--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
     "@trpc/server": "^10.1.0",
+    "classnames": "^2.5.1",
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
