--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,13 +13,19 @@
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
     "@prepi/api": "*",
+    "@radix-ui/react-icons": "^1.3.0",
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
     "@trpc/server": "^10.1.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.438.0",
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
