--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,10 @@
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
     "@prepi/api": "*",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
     "@trpc/server": "^10.1.0",
