--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@prepi/typescript-config/nextjs.json",
   "include": ["src", "index.ts", "transformer.ts"]
 }
