--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prepi/api": "*",
+    "@prepi/api": "workspace:*",
     "@clerk/nextjs": "^5.4.1",
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
