--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,14 +10,16 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@prepi/db": "workspace:*",
     "@clerk/nextjs": "^5.4.1",
-    "@prepi/db": "*",
     "@trpc/client": "^10.1.0",
     "@trpc/server": "^10.1.0",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@prepi/typescript-config": "workspace:*",
+    "@prepi/eslint-config": "workspace:*",
     "eslint": "^8.28.0",
     "typescript": "^4.9.3"
   }
