--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,6 +14,8 @@
     "@prisma/client": "^4.6.1"
   },
   "devDependencies": {
+    "@prepi/typescript-config": "workspace:*",
+    "@prepi/eslint-config": "workspace:*",
     "dotenv-cli": "^6.0.0",
     "prisma": "^4.6.1",
     "typescript": "^4.9.3"
