--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,4 +1,5 @@
 {
   "extends": "@prepi/typescript-config/nextjs.json",
-  "include": ["index.ts"]
+  "include": ["index.ts"],
+  "exclude": ["node_modules"]
 }
