--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prepi/api": "workspace:*",
     "@clerk/nextjs": "^5.4.1",
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
+    "@prepi/api": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -23,6 +23,7 @@
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
     "@trpc/server": "^10.1.0",
+    "@vercel/blob": "^0.23.4",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
