Migrate old lessons

--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "prepi",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "migrate": "npm run migrate --workspace=packages/migration --"
   },
   "devDependencies": {
+    "@types/node": "^22.5.4",
     "prettier": "^3.2.5",
     "turbo": "^2.1.1",
     "typescript": "^5.4.5"
