--- a/turbo.json
+++ b/turbo.json
@@ -20,6 +20,7 @@
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
     "CLERK_SECRET_KEY",
     "VERCEL_URL",
-    "NODE_ENV"
+    "NODE_ENV",
+    "MONGODB_URI"
   ]
 }
