--- a/turbo.json
+++ b/turbo.json
@@ -3,9 +3,11 @@
   "ui": "tui",
   "tasks": {
     "db:generate": {
+      "inputs": ["prisma/schema.prisma"],
       "cache": false
     },
     "db:push": {
+      "inputs": ["prisma/schema.prisma"],
       "cache": false
     },
     "build": {
@@ -17,6 +19,7 @@
       "dependsOn": ["^lint"]
     },
     "dev": {
+      "dependsOn": ["^db:generate"],
       "cache": false,
       "persistent": true
     }
