--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@prepi/eslint-config": "workspace:*",
     "@prepi/typescript-config": "workspace:*",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.19.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
