--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@prepi/eslint-config": "workspace:*",
     "@prepi/typescript-config": "workspace:*",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
