--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,12 +18,15 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
     "@trpc/server": "^10.1.0",
     "@vercel/blob": "^0.23.4",
+    "better-react-mathjax": "^2.0.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
