--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
     "@trpc/server": "^10.1.0",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.23.4",
     "better-react-mathjax": "^2.0.3",
     "class-variance-authority": "^0.7.0",
