--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -25,6 +25,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
