Add posthog to web

--- a/turbo.json
+++ b/turbo.json
@@ -30,6 +30,8 @@
     "CLERK_SECRET_KEY",
     "VERCEL_URL",
     "NODE_ENV",
-    "MONGODB_URI"
+    "MONGODB_URI",
+    "NEXT_PUBLIC_POSTHOG_KEY",
+    "NEXT_PUBLIC_POSTHOG_HOST"
   ]
 }
