--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.438.0",
     "next": "14.2.6",
+    "posthog-js": "^1.163.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.5.2",
