Add NEXT_PUBLIC_BASE_URL to web

--- a/turbo.json
+++ b/turbo.json
@@ -32,6 +32,7 @@
     "NODE_ENV",
     "MONGODB_URI",
     "NEXT_PUBLIC_POSTHOG_KEY",
-    "NEXT_PUBLIC_POSTHOG_HOST"
+    "NEXT_PUBLIC_POSTHOG_HOST",
+    "NEXT_PUBLIC_BASE_URL"
   ]
 }
