--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,16 +10,18 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@prepi/db": "workspace:*",
     "@clerk/nextjs": "^5.4.1",
+    "@prepi/db": "workspace:*",
     "@trpc/client": "^10.1.0",
     "@trpc/server": "^10.1.0",
+    "@vercel/kv": "^2.0.0",
+    "dotenv": "^16.0.0",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@prepi/typescript-config": "workspace:*",
     "@prepi/eslint-config": "workspace:*",
+    "@prepi/typescript-config": "workspace:*",
     "eslint": "^8.28.0",
     "typescript": "^4.9.3"
   }
