--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "migrate": "npm run migrate --workspace=packages/migration --",
     "db:generate": "turbo db:generate",
+    "db:migrate": "turbo db:migrate",
     "db:push": "turbo db:push"
   },
   "devDependencies": {
