--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@prepi/api": "workspace:*",
     "@prepi/db": "workspace:*",
+    "@prepi/utils": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
