--- a/packages/migration/package.json
+++ b/packages/migration/package.json
@@ -4,7 +4,8 @@
   "description": "Migration scripts",
   "main": "index.ts",
   "scripts": {
-    "migrate": "ts-node index.ts"
+    "with-env": "dotenv -e ../../.env --",
+    "migrate": "pnpm with-env ts-node index.ts"
   },
   "dependencies": {
     "mongodb": "^4.4.0",
