--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo --port 3000",
-    "build": "next build",
+    "with-env": "dotenv -e ../../.env --",
+    "dev": "pnpm with-env next dev --turbo --port 3000",
+    "build": "pnpm with-env next build",
     "start": "next start",
     "lint": "next lint"
   },
