Setup husky with prettier

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "migrate": "npm run migrate --workspace=packages/migration --",
     "db:generate": "turbo db:generate",
     "db:migrate": "turbo db:migrate",
-    "db:push": "turbo db:push"
+    "db:push": "turbo db:push",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
+    "husky": "^9.1.6",
     "prettier": "^3.2.5",
     "turbo": "^2.1.1",
     "typescript": "^5.4.5"
