Improve migrate script

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "migrate": "npm run migrate --workspace=packages/migration --",
+    "db:migrate": "npm run db:migrate --workspace=packages/db --",
     "db:generate": "turbo db:generate",
-    "db:migrate": "turbo db:migrate",
     "db:push": "turbo db:push",
     "prepare": "husky"
   },
