--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.1.0",
     "@clerk/nextjs": "^5.4.1",
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
