--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@prepi/api": "workspace:*",
     "@prepi/db": "workspace:*",
     "@prepi/utils": "workspace:*",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -28,8 +29,10 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.1.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.23.4",
