--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -54,6 +54,7 @@
     "@prepi/eslint-config": "workspace:*",
     "@prepi/typescript-config": "workspace:*",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.19.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
