--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.1.16",
     "lucide-react": "^0.438.0",
     "mathquill": "0.10.1-a",
     "next": "14.2.13",
