--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,6 +16,7 @@
     "@trpc/client": "^10.1.0",
     "@trpc/server": "^10.1.0",
     "@vercel/kv": "^2.0.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.0.0",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
