--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "with-env": "dotenv -e ../../.env --",
     "dev": "pnpm with-env next dev --turbo --port 3001",
-    "build": "pnpm with-env next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
