--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.23.4",
     "better-react-mathjax": "^2.0.3",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -47,6 +48,7 @@
     "next": "14.2.13",
     "posthog-js": "^1.163.0",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
