--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crisp-sdk-web": "^1.0.25",
     "lucide-react": "^0.438.0",
     "next": "14.2.11",
     "posthog-js": "^1.163.0",
