--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^4.36.1",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
@@ -42,6 +43,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "crisp-sdk-web": "^1.0.25",
     "dayjs": "^1.11.13",
     "html-react-parser": "^5.1.16",
     "lucide-react": "^0.438.0",
