--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@clerk/nextjs": "^5.4.1",
     "@prepi/db": "workspace:*",
+    "@stripe/stripe-js": "^4.6.0",
     "@trpc/client": "^10.1.0",
     "@trpc/server": "^10.1.0",
     "@vercel/kv": "^2.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.0.0",
+    "stripe": "^17.1.0",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
