Compute mastery level on practice finished

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "migrate": "npm run migrate --workspace=packages/migration --",
     "db:migrate": "npm run db:migrate --workspace=packages/db --",
+    "db:reset": "npm run db:reset --workspace=packages/db --",
     "db:generate": "turbo db:generate",
     "db:deploy": "turbo db:deploy",
     "db:push": "turbo db:push",
