--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.6.0",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "4",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.45.2",
