--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@clerk/nextjs": "^5.4.1",
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
+    "@lottiefiles/dotlottie-react": "^0.9.1",
     "@prepi/api": "workspace:*",
     "@prepi/db": "workspace:*",
     "@prepi/utils": "workspace:*",
