--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
@@ -50,6 +51,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "crisp-sdk-web": "^1.0.25",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "html-react-parser": "^5.1.16",
     "lucide-react": "^0.438.0",
@@ -58,6 +60,7 @@
     "posthog-js": "^1.163.0",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "stripe": "^17.1.0",
     "tailwind-merge": "^2.5.2",
