--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "@vercel/kv": "^2.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.0.0",
+    "posthog-node": "^4.2.0",
     "stripe": "^17.1.0",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
