--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,6 +63,7 @@
     "posthog-node": "^4.2.0",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "stripe": "^17.1.0",
