--- a/packages/migration/package.json
+++ b/packages/migration/package.json
@@ -8,13 +8,15 @@
     "migrate": "pnpm with-env ts-node index.ts"
   },
   "dependencies": {
-    "mongodb": "^4.4.0",
     "@prepi/db": "workspace:*",
-    "dotenv": "^16.0.0"
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
+    "dotenv": "^16.0.0",
+    "mongodb": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "typescript": "^4.7.0",
-    "ts-node": "^10.8.0"
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.0"
   }
 }
