--- a/packages/migration/package.json
+++ b/packages/migration/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "dotenv": "^16.0.0",
-    "mongodb": "^4.4.0"
+    "mongodb": "^4.4.0",
+    "openai": "^4.68.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
