--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,6 +57,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "html-react-parser": "^5.1.16",
+    "katex": "^0.16.11",
     "lucide-react": "^0.438.0",
     "mathquill": "0.10.1-a",
     "next": "14.2.15",
