--- a/packages/migration/package.json
+++ b/packages/migration/package.json
@@ -13,7 +13,8 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.0.0",
     "mongodb": "^4.4.0",
-    "openai": "^4.68.0"
+    "openai": "^4.68.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
