--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -68,6 +68,7 @@
     "react-confetti": "^6.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
+    "react-string-replace": "^1.1.1",
     "stripe": "^17.1.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
